readme.txt
Git is a distributed version control system.
Git is free software distributed under the GPL.
Git has a mutable index called stage.
Git tracks changes of files .

arp.c:108:17: error: dereferencing pointer to incomplete type ‘struct ifaddrs’
     dev = ifaddr->ifa_name;
                 ^
arp.c:121:29: error: dereferencing pointer to incomplete type ‘struct sockaddr_ll’
             memcpy(srcMAC, s->sll_addr, 6);
                             ^
